egonlang-core/res/examples/invalid/let_decl_unknown_type.eg
let a: unknown;

// out: TypeError: unknown type e.g. let a: unknown; or let a;